--- a/src/API.Models/API.Models.csproj
+++ b/src/API.Models/API.Models.csproj
@@ -6,4 +6,8 @@
         <RootNamespace>Users.API.Models</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Domain\Domain.csproj" />
+    </ItemGroup>
+
 </Project>
