--- a/tests/SystemTests/API.Shared.Tests/API.Shared.Tests.csproj
+++ b/tests/SystemTests/API.Shared.Tests/API.Shared.Tests.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\src\API\Models\Models.csproj" />
     <ProjectReference Include="..\..\..\src\Persistence\Persistence.csproj" />
     <ProjectReference Include="..\..\Shared\TestInfrastructure\TestInfrastructure.csproj" />
   </ItemGroup>
