--- a/src/API/Write/Write.csproj
+++ b/src/API/Write/Write.csproj
@@ -31,6 +31,7 @@
     <ItemGroup>
       <ProjectReference Include="..\..\Application\Application.csproj" />
       <ProjectReference Include="..\..\Domain\Domain.csproj" />
+      <ProjectReference Include="..\..\Persistence\Persistence.csproj" />
       <ProjectReference Include="..\Models\Models.csproj" />
       <ProjectReference Include="..\Shared\Shared.csproj" />
     </ItemGroup>
