Added FluentValidation. Added tests.

--- a/src/API/Write/Write.csproj
+++ b/src/API/Write/Write.csproj
@@ -13,11 +13,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Docker" />
-    </ItemGroup>
-
-    <ItemGroup>
       <PackageReference Include="AutoMapper" Version="10.1.1" />
+      <PackageReference Include="FluentValidation" Version="10.3.5" />
+      <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.5" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.3.5" />
       <PackageReference Include="MediatR" Version="9.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.0" />
