--- a/src/API/Models/Models.csproj
+++ b/src/API/Models/Models.csproj
@@ -7,6 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="10.3.5" />
+      <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.5" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.3.5" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
 
