--- a/tests/Shared/TestInfrastructure/TestInfrastructure.csproj
+++ b/tests/Shared/TestInfrastructure/TestInfrastructure.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\src\API\Models\Models.csproj" />
     <ProjectReference Include="..\..\..\src\Domain\Domain.csproj" />
     <ProjectReference Include="..\..\..\src\Persistence\Persistence.csproj" />
   </ItemGroup>
