--- a/tests/SystemTests/API.Write.Tests/API.Write.Tests.csproj
+++ b/tests/SystemTests/API.Write.Tests/API.Write.Tests.csproj
@@ -35,6 +35,7 @@
     <ItemGroup>
       <ProjectReference Include="..\..\..\src\API\Models\Models.csproj" />
       <ProjectReference Include="..\..\..\src\API\Write\Write.csproj" />
+      <ProjectReference Include="..\..\..\src\Domain\Domain.csproj" />
       <ProjectReference Include="..\API.Read.Tests\API.Read.Tests.csproj" />
     </ItemGroup>
 
