--- a/tests/SystemTests/API.Read.Tests/API.Read.Tests.csproj
+++ b/tests/SystemTests/API.Read.Tests/API.Read.Tests.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="NUnit" Version="3.13.2" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.1.0" />
         <PackageReference Include="coverlet.collector" Version="3.1.0" />
+        <PackageReference Include="System.Collections.Specialized" Version="4.3.0" />
     </ItemGroup>
 
     <ItemGroup>
