--- a/src/API/Shared/Shared.csproj
+++ b/src/API/Shared/Shared.csproj
@@ -17,4 +17,8 @@
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Models\Models.csproj" />
+    </ItemGroup>
+
 </Project>
