--- a/src/API/Write/Properties/launchSettings.json
+++ b/src/API/Write/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "dotnetRunMessages": "true",
       "launchBrowser": true,
       "launchUrl": "",
-      "applicationUrl": "http://localhost:5002;https://localhost:5003;",
+      "applicationUrl": "https://localhost:5002;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
