Started implementing nullable (Shared).

--- a/src/API/Shared/Shared.csproj
+++ b/src/API/Shared/Shared.csproj
@@ -4,6 +4,15 @@
         <TargetFramework>net6.0</TargetFramework>
         <AssemblyName>Users.API.Shared</AssemblyName>
         <RootNamespace>Users.API.Shared</RootNamespace>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
+
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+      <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+    </PropertyGroup>
+
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+      <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
     </PropertyGroup>
 
     <ItemGroup>
