Strarted implementing nullable (Domian, Application, Persistence).

--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>Users.Application</AssemblyName>
     <RootNamespace>Users.Application</RootNamespace>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
