--- a/src/Presentation/Morsley.UK.People.API.Read/appsettings.json
+++ b/src/Presentation/Morsley.UK.People.API.Read/appsettings.json
@@ -37,7 +37,7 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Issuer": "https://localhost:5000/",
+    "Issuer": "https://localhost:5001/",
     "Audience": "https://localhost:5001/"
   },
   "MongoSettings": {
@@ -45,7 +45,7 @@
     "Port": "27017",
     "Username": "root",
     "Password": "password",
-    "DatabaseName": "morsley_uk",
+    "DatabaseName": "morsley_uk_people_read",
     "TableName": "people"
   }
 }
