--- a/src/Presentation/Morsley.UK.People.API.Security/Morsley.UK.People.API.Security.csproj
+++ b/src/Presentation/Morsley.UK.People.API.Security/Morsley.UK.People.API.Security.csproj
@@ -1,12 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-	  <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	  <AssemblyName>Morsley.UK.People.API.Security</AssemblyName>
 	  <RootNamespace>Morsley.UK.People.API.Security</RootNamespace>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
+      <Nullable>enable</Nullable>
   </PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
