--- a/src/Presentation/Morsley.UK.People.API.Write/appsettings.json
+++ b/src/Presentation/Morsley.UK.People.API.Write/appsettings.json
@@ -37,15 +37,15 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Issuer": "https://localhost:5000/",
+    "Issuer": "https://localhost:5002/",
     "Audience": "https://localhost:5002/"
   },
   "MongoSettings": {
     "Host": "localhost",
-    "Port": "27017",
+    "Port": "27002",
     "Username": "root",
     "Password": "password",
-    "DatabaseName": "morsley_uk",
+    "DatabaseName": "morsley_uk_people_write",
     "TableName": "people"
   }
 }
