--- a/src/Infrastructure/Morsley.UK.People.Synchronizer/appsettings.json
+++ b/src/Infrastructure/Morsley.UK.People.Synchronizer/appsettings.json
@@ -19,5 +19,12 @@
     "Properties": {
       "Application": "Morsley UK - People - Write API"
     }
+  },
+  "RabbitMQSettings": {
+    "Host": "localhost",
+    "Port": "5672",
+    "Username": "root",
+    "Password": "password",
+    "QueueName": "morsley_uk_people"
   }
 }
