--- a/src/Presentation/Morsley.UK.People.API.Write/appsettings.json
+++ b/src/Presentation/Morsley.UK.People.API.Write/appsettings.json
@@ -47,5 +47,12 @@
     "Password": "password",
     "DatabaseName": "morsley_uk_people_write",
     "TableName": "people"
+  },
+  "RabbitMQSettings": {
+    "Host": "localhost",
+    "Port": "5672",
+    "Username": "root",
+    "Password": "password",
+    "QueueName": "morsley_uk_people"
   }
 }
