--- a/src/Infrastructure/Morsley.UK.People.Synchronizer/Morsley.UK.People.Synchronizer.csproj
+++ b/src/Infrastructure/Morsley.UK.People.Synchronizer/Morsley.UK.People.Synchronizer.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="4.2.0" />
