--- a/src/Presentation/Morsley.UK.People.API.Read/appsettings.json
+++ b/src/Presentation/Morsley.UK.People.API.Read/appsettings.json
@@ -45,7 +45,7 @@
     "Port": "27017",
     "Username": "root",
     "Password": "password",
-    "DatabaseName": "morsley_uk_people_read",
+    "DatabaseName": "morsley_uk",
     "TableName": "people"
   }
 }
