--- a/src/Presentation/Morsley.UK.People.API.Write/appsettings.json
+++ b/src/Presentation/Morsley.UK.People.API.Write/appsettings.json
@@ -20,6 +20,7 @@
       "Application": "Morsley UK - People - Write API"
     }
   },
+
   "OpenApiInfo": {
     "Title": "People Write API - {0}",
     "Description": "The Person Write API.",
@@ -35,24 +36,28 @@
       "Url": "https://morsley.uk/license"
     }
   },
-  "AllowedHosts": "*",
+
   "Jwt": {
     "Issuer": "https://localhost:5002/",
     "Audience": "https://localhost:5002/"
   },
+
   "MongoSettings": {
     "Host": "localhost",
     "Port": "27002",
     "Username": "root",
     "Password": "password",
-    "DatabaseName": "morsley_uk_people_write",
+    "DatabaseName": "morsley_uk",
     "TableName": "people"
   },
+
   "RabbitMQSettings": {
     "Host": "localhost",
     "Port": "5672",
     "Username": "root",
     "Password": "password",
     "QueueName": "morsley_uk_people"
-  }
+  },
+
+  "AllowedHosts": "*"
 }
