--- a/src/Presentation/Morsley.UK.People.API.Write/appsettings.Development.json
+++ b/src/Presentation/Morsley.UK.People.API.Write/appsettings.Development.json
@@ -1,2 +1,63 @@
 {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": { "path": "Logs/log.txt" }
+      },
+      {
+        "Name": "Seq",
+        "Args": { "serverUrl": "http://localhost:5341" }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "Morsley UK - People - Write API"
+    }
+  },
+
+  "OpenApiInfo": {
+    "Title": "People Write API - {0}",
+    "Description": "The Person Write API.",
+    "Version": "VERSION WILL BE INTERNALLY REPLACED!",
+    "TermsOfService": "https://morsley.uk/terms-of-service",
+    "Contact": {
+      "Email": "john@morsley.uk",
+      "Name": "John Morsley",
+      "Url": "https://morsley.uk"
+    },
+    "License": {
+      "Name": "MIT",
+      "Url": "https://morsley.uk/license"
+    }
+  },
+
+  "Jwt": {
+    "Issuer": "https://localhost:5002/",
+    "Audience": "https://localhost:5002/"
+  },
+
+  "MongoSettings": {
+    "Host": "localhost",
+    "Port": "27002",
+    "Username": "root",
+    "Password": "password",
+    "DatabaseName": "morsley_uk",
+    "TableName": "people"
+  },
+
+  "RabbitMQSettings": {
+    "Host": "localhost",
+    "Port": "5672",
+    "Username": "root",
+    "Password": "password",
+    "QueueName": "morsley_uk_people_development"
+  },
+
+  "AllowedHosts": "*"
 }
