--- a/tests/Common/Morsley.UK.People.Tests.Common/Morsley.UK.People.Tests.Common.csproj
+++ b/tests/Common/Morsley.UK.People.Tests.Common/Morsley.UK.People.Tests.Common.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.17.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
   </ItemGroup>
 
