I think I've got the Message Bus working. But refactoring the System Tests framework.

--- a/src/Presentation/Morsley.UK.People.API.Write/appsettings.Development.json
+++ b/src/Presentation/Morsley.UK.People.API.Write/appsettings.Development.json
@@ -56,7 +56,7 @@
     "Port": "5672",
     "Username": "root",
     "Password": "password",
-    "QueueName": "morsley_uk_people_development"
+    "QueueName": "morsley_uk_people"
   },
 
   "AllowedHosts": "*"
