I think refactoring is finally done.

--- a/src/Infrastructure/Morsley.UK.People.Synchronizer/appsettings.json
+++ b/src/Infrastructure/Morsley.UK.People.Synchronizer/appsettings.json
@@ -24,7 +24,14 @@
     "Host": "localhost",
     "Port": "5672",
     "Username": "root",
+    "Password": "password"
+  },
+  "MongoDBSettings": {
+    "Host": "localhost",
+    "Port": "27001",
+    "Username": "root",
     "Password": "password",
-    "QueueName": "morsley_uk_people"
+    "DatabaseName": "morsley_uk",
+    "TableName": "people"
   }
 }
