--- a/src/Presentation/Morsley.UK.People.API.Write/appsettings.Development.json
+++ b/src/Presentation/Morsley.UK.People.API.Write/appsettings.Development.json
@@ -42,7 +42,7 @@
     "Audience": "https://localhost:5002/"
   },
 
-  "MongoSettings": {
+  "WriteMongoDBSettings": {
     "Host": "localhost",
     "Port": "27002",
     "Username": "root",
