--- a/src/Presentation/Morsley.UK.People.API.Read/appsettings.json
+++ b/src/Presentation/Morsley.UK.People.API.Read/appsettings.json
@@ -40,7 +40,7 @@
     "Issuer": "https://localhost:5001/",
     "Audience": "https://localhost:5001/"
   },
-  "MongoSettings": {
+  "ReadMongoDBSettings": {
     "Host": "localhost",
     "Port": "27001",
     "Username": "root",
