Got the whole Add Person journey complete.

--- a/src/Infrastructure/Morsley.UK.People.Synchronizer/appsettings.json
+++ b/src/Infrastructure/Morsley.UK.People.Synchronizer/appsettings.json
@@ -20,13 +20,15 @@
       "Application": "Morsley UK - People - Write API"
     }
   },
+
   "RabbitMQSettings": {
     "Host": "localhost",
     "Port": "5672",
     "Username": "root",
     "Password": "password"
   },
-  "MongoDBSettings": {
+
+  "ReadMongoDBSettings": {
     "Host": "localhost",
     "Port": "27001",
     "Username": "root",
