--- a/src/Infrastructure/Morsley.UK.People.Synchronizer/Morsley.UK.People.Synchronizer.csproj
+++ b/src/Infrastructure/Morsley.UK.People.Synchronizer/Morsley.UK.People.Synchronizer.csproj
@@ -26,5 +26,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Application\Morsley.UK.People.Application\Morsley.UK.People.Application.csproj" />
     <ProjectReference Include="..\Morsley.UK.People.Messaging\Morsley.UK.People.Messaging.csproj" />
+    <ProjectReference Include="..\Morsley.UK.People.Persistence\Morsley.UK.People.Persistence.csproj" />
   </ItemGroup>
 </Project>
