Added some metrics to the Synchronizer application.

--- a/src/Infrastructure/Morsley.UK.People.Synchronizer/appsettings.json
+++ b/src/Infrastructure/Morsley.UK.People.Synchronizer/appsettings.json
@@ -35,5 +35,15 @@
     "Password": "password",
     "DatabaseName": "morsley_uk",
     "TableName": "people"
+  },
+
+  "WriteMongoDBSettings": {
+    "Host": "localhost",
+    "Port": "27002",
+    "Username": "root",
+    "Password": "password",
+    "DatabaseName": "morsley_uk",
+    "TableName": "people"
   }
+
 }
