--- a/tests/UnitTests/Morsley.UK.People.Domain.Unit.Tests/Morsley.UK.People.Domain.Unit.Tests.csproj
+++ b/tests/UnitTests/Morsley.UK.People.Domain.Unit.Tests/Morsley.UK.People.Domain.Unit.Tests.csproj
@@ -16,6 +16,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="5.1.1" />
     <PackageReference Include="SerilogTimings" Version="2.3.0" />
   </ItemGroup>
