Continuing work on adding OpenTelemetry.

--- a/src/Application/Morsley.UK.People.Application/Morsley.UK.People.Application.csproj
+++ b/src/Application/Morsley.UK.People.Application/Morsley.UK.People.Application.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\..\Domain\Morsley.UK.People.Domain\Morsley.UK.People.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pipelines\" />
+  </ItemGroup>
+
 </Project>
