--- a/src/Presentation/Morsley.UK.People.API.Read/Morsley.UK.People.API.Read.csproj
+++ b/src/Presentation/Morsley.UK.People.API.Read/Morsley.UK.People.API.Read.csproj
@@ -26,10 +26,14 @@
         <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.4" />
         <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
         <PackageReference Include="MongoDB.Driver.Core.Extensions.OpenTelemetry" Version="1.0.0" />
-        <PackageReference Include="OpenTelemetry" Version="1.2.0" />
-        <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.2.0" />
-        <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="1.2.0" />
-        <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="1.2.0" />
+        <PackageReference Include="OpenTelemetry" Version="1.3.0-beta.1" />
+        <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.3.0-beta.1" />
+        <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="1.3.0-beta.1" />
+        <PackageReference Include="OpenTelemetry.Exporter.Prometheus" Version="1.3.0-beta.1" />
+        <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="1.3.0-beta.1" />
+        <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc9.3" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc9.3" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc9.3" />
         <PackageReference Include="Seq.Extensions.Logging" Version="6.0.0" />
         <PackageReference Include="Serilog" Version="2.11.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
