Added caching behavior for Get People.

--- a/src/Presentation/Morsley.UK.People.API.Read/Morsley.UK.People.API.Read.csproj
+++ b/src/Presentation/Morsley.UK.People.API.Read/Morsley.UK.People.API.Read.csproj
@@ -54,6 +54,7 @@
       <ProjectReference Include="..\..\Application\Morsley.UK.People.Application\Morsley.UK.People.Application.csproj" />
       <ProjectReference Include="..\..\Common\Morsley.UK.People.Common\Morsley.UK.People.Common.csproj" />
       <ProjectReference Include="..\..\Domain\Morsley.UK.People.Domain\Morsley.UK.People.Domain.csproj" />
+      <ProjectReference Include="..\..\Infrastructure\Morsley.UK.People.Caching\Morsley.UK.People.Caching.csproj" />
       <ProjectReference Include="..\..\Infrastructure\Morsley.UK.People.Messaging\Morsley.UK.People.Messaging.csproj" />
       <ProjectReference Include="..\..\Infrastructure\Morsley.UK.People.Persistence\Morsley.UK.People.Persistence.csproj" />
       <ProjectReference Include="..\Morsley.UK.People.API.Common\Morsley.UK.People.API.Common.csproj" />
