--- a/infrastructure/docker-compose.yaml
+++ b/infrastructure/docker-compose.yaml
@@ -65,7 +65,7 @@ services:
     container_name: morsley_uk_people_cache
     ports: 
     - 6379:6379
-    #command: redis-server --save 60 1 
+    #command: redis-server --requirepass password
     restart: unless-stopped
     networks:
     - morsley_uk_network
@@ -105,6 +105,7 @@ services:
     - 8081:8081
     environment:
     - REDIS_HOSTS=local:morsley_uk_people_cache:6379
+    #- REDIS_PASSWORD=password
     restart: unless-stopped
     networks:
     - morsley_uk_network
