Fixed system tests broken by the pipeline cache implementation.

--- a/src/Presentation/Morsley.UK.People.API.Read/appsettings.json
+++ b/src/Presentation/Morsley.UK.People.API.Read/appsettings.json
@@ -47,5 +47,10 @@
     "Password": "password",
     "DatabaseName": "morsley_uk",
     "TableName": "people"
+  },
+  "RedisCacheSettings": {
+    "Host": "localhost",
+    "Port": "6379",
+    "Password": "password"
   }
 }
