--- a/src/Presentation/Morsley.UK.People.API.Write/Morsley.UK.People.API.Write.csproj
+++ b/src/Presentation/Morsley.UK.People.API.Write/Morsley.UK.People.API.Write.csproj
@@ -19,9 +19,9 @@
 
 	<ItemGroup>
       <PackageReference Include="AutoMapper" Version="11.0.1" />
-      <PackageReference Include="FluentValidation" Version="10.4.0" />
-      <PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
-      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.4.0" />
+      <PackageReference Include="FluentValidation" Version="11.0.1" />
+      <PackageReference Include="FluentValidation.AspNetCore" Version="11.0.1" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.0.1" />
       <PackageReference Include="MediatR" Version="10.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.2.0" />
       <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.4" />
@@ -29,10 +29,12 @@
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
       <PackageReference Include="MongoDB.Driver.Core.Extensions.OpenTelemetry" Version="1.0.0" />
-      <PackageReference Include="OpenTelemetry" Version="1.2.0" />
-      <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.2.0" />
-      <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="1.2.0" />
-      <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="1.2.0" />
+      <PackageReference Include="OpenTelemetry" Version="1.3.0-beta.1" />
+      <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="1.3.0-beta.1" />
+      <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="1.3.0-beta.1" />
+      <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc9.3" />
+      <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc9.3" />
+      <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc9.3" />
       <PackageReference Include="Seq.Extensions.Logging" Version="6.0.0" />
       <PackageReference Include="Serilog" Version="2.11.0" />
       <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
