--- a/src/Presentation/Morsley.UK.People.API.Read/appsettings.Development.json
+++ b/src/Presentation/Morsley.UK.People.API.Read/appsettings.Development.json
@@ -17,9 +17,10 @@
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
     "Properties": {
-      "Application": "People Read API"
+      "Application": "Morsley UK - People - Read API"
     }
   },
+
   "OpenApiInfo": {
     "Title": "People Read API - {0}",
     "Description": "The People Read API.",
@@ -35,11 +36,14 @@
       "Url": "https://morsley.uk/license"
     }
   },
+
   "AllowedHosts": "*",
+
   "Jwt": {
     "Issuer": "https://localhost:5001/",
     "Audience": "https://localhost:5001/"
   },
+
   "ReadMongoDBSettings": {
     "Host": "localhost",
     "Port": "27001",
@@ -48,6 +52,7 @@
     "DatabaseName": "morsley_uk",
     "TableName": "people"
   },
+
   "RedisCacheSettings": {
     "Host": "localhost",
     "Port": "6379",
