--- a/src/Presentation/Morsley.UK.People.API.Write/appsettings.json
+++ b/src/Presentation/Morsley.UK.People.API.Write/appsettings.json
@@ -59,5 +59,11 @@
     "QueueName": "morsley_uk_people"
   },
 
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "RedisCacheSettings": {
+    "Host": "localhost",
+    "Port": "6379",
+    "Password": "password"
+  }
 }
