--- a/src/Presentation/Morsley.UK.People.API.Write/appsettings.Development.json
+++ b/src/Presentation/Morsley.UK.People.API.Write/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq" ],
-    "MinimumLevel": "Information",
+    "MinimumLevel": "Debug",
     "WriteTo": [
       {
         "Name": "Console"
@@ -59,5 +59,11 @@
     "QueueName": "morsley_uk_people"
   },
 
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "RedisCacheSettings": {
+    "Host": "localhost",
+    "Port": "6379",
+    "Password": "password"
+  }
 }
