--- a/tests/Common/Morsley.UK.People.Tests.Common/Morsley.UK.People.Tests.Common.csproj
+++ b/tests/Common/Morsley.UK.People.Tests.Common/Morsley.UK.People.Tests.Common.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.17.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
     <PackageReference Include="NUnit" Version="3.13.3" />
   </ItemGroup>
 
