--- a/tests/UnitTests/Morsley.UK.People.Tests.Common.Unit.Tests/Morsley.UK.People.Tests.Common.Unit.Tests.csproj
+++ b/tests/UnitTests/Morsley.UK.People.Tests.Common.Unit.Tests/Morsley.UK.People.Tests.Common.Unit.Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\tests\Common\Morsley.UK.People.Tests.Common\Morsley.UK.People.Tests.Common.csproj" />
+    <ProjectReference Include="..\..\Common\Morsley.UK.People.Tests.Common\Morsley.UK.People.Tests.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
