--- a/tests/Fixtures/Morsley.UK.People.API.Test.Fixture/Morsley.UK.People.API.Test.Fixture.csproj
+++ b/tests/Fixtures/Morsley.UK.People.API.Test.Fixture/Morsley.UK.People.API.Test.Fixture.csproj
@@ -24,7 +24,7 @@
     <ProjectReference Include="..\..\..\src\Infrastructure\Morsley.UK.People.Persistence\Morsley.UK.People.Persistence.csproj" />
     <ProjectReference Include="..\..\..\src\Presentation\Morsley.UK.People.API.Contracts\Morsley.UK.People.API.Contracts.csproj" />
     <ProjectReference Include="..\..\Common\Morsley.UK.People.Tests.Common\Morsley.UK.People.Tests.Common.csproj" />
-    <ProjectReference Include="..\..\Temp\Morsley.UK.People.Test.Fixture\Morsley.UK.People.Test.Fixture.csproj" />
+    <ProjectReference Include="..\..\Fixtures\Morsley.UK.People.Test.Fixture\Morsley.UK.People.Test.Fixture.csproj" />
   </ItemGroup>
 
 </Project>
