--- a/tests/Fixtures/Morsley.UK.People.Test.Fixture/Morsley.UK.People.Test.Fixture.csproj
+++ b/tests/Fixtures/Morsley.UK.People.Test.Fixture/Morsley.UK.People.Test.Fixture.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -9,16 +9,29 @@
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.17.0" />
     <PackageReference Include="Docker.DotNet" Version="3.125.5" />
-    <PackageReference Include="FluentAssertions" Version="6.5.1" />
-    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="6.0.2" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
-    <PackageReference Include="NUnit" Version="3.13.2" />
+    <PackageReference Include="FluentAssertions" Version="6.6.0" />
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="6.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.15.1" />
+    <PackageReference Include="NUnit" Version="3.13.3" />
+    <PackageReference Include="Serilog" Version="2.11.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
+    <PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
+    <PackageReference Include="Serilog.Sinks.Seq" Version="5.1.1" />
+    <PackageReference Include="SerilogTimings" Version="2.3.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.5.61" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Domain\Morsley.UK.People.Domain\Morsley.UK.People.Domain.csproj" />
-    <ProjectReference Include="..\src\Infrastructure\Morsley.UK.People.Persistence\Morsley.UK.People.Persistence.csproj" />
-    <ProjectReference Include="..\src\Presentation\Morsley.UK.People.API.Models\Morsley.UK.People.API.Models.csproj" />
+    <ProjectReference Include="..\..\..\src\Domain\Morsley.UK.People.Domain\Morsley.UK.People.Domain.csproj" />
+    <ProjectReference Include="..\..\..\src\Infrastructure\Morsley.UK.People.Messaging\Morsley.UK.People.Messaging.csproj" />
+    <ProjectReference Include="..\..\..\src\Infrastructure\Morsley.UK.People.Persistence\Morsley.UK.People.Persistence.csproj" />
+    <ProjectReference Include="..\..\..\src\Infrastructure\Morsley.UK.People.Synchronizer\Morsley.UK.People.Synchronizer.csproj" />
+    <ProjectReference Include="..\..\..\src\Presentation\Morsley.UK.People.API.Contracts\Morsley.UK.People.API.Contracts.csproj" />
+    <ProjectReference Include="..\..\Common\Morsley.UK.People.Tests.Common\Morsley.UK.People.Tests.Common.csproj" />
   </ItemGroup>
 
 </Project>
